# FlowPredictionDemo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  flow_prediction.c  flow_prediction.idl  pyproject.toml
flowpredictiondemo/: flow_dataset.py  main.py  model.py  normalizer.py  training.py
flowpredictiondemo/data/: flow_data.csv
src/: Main.c  flow_prediction.c
vivado_proj/: example_project.tcl
vivado_proj/example_project/: example_project.xpr
vivado_proj/srcs/: network.vhd  skeleton.vhd
vivado_proj/srcs/linear_0/: linear_0.vhd  linear_0_b_rom.vhd  linear_0_w_rom.vhd
vivado_proj/srcs/linear_1/: linear_1.vhd  linear_1_b_rom.vhd  linear_1_w_rom.vhd
vivado_proj/srcs/relu_0/: relu_0.vhd
