[tool.poetry]
name = "flowpredictiondemo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
include = ["flowpredictiondemo"]

[tool.poetry.dependencies]
python = "~3.11"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
torch = ">=2.0.0, !=2.0.1"
scikit-learn = "^1.3.1"
elasticai-creator = {git = "https://github.com/es-ude/elastic-ai.creator.git", rev = "5a6baf4"}
elasticai-stubGen = {git = "git@github.com:es-ude/elastic-ai.stubGen.git", rev = "55aed4c"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
